Intio & alb-controner/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - flask-gateway
  http:
  - timeout: 3s
    route:
    - destination:
        host: two-tier-app-service
        subset: v1
      weight: 50
    - destination:
        host: two-tier-app-service
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-destinationrule
spec:
  host: two-tier-app-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
